--- a/src/app.postcss
+++ b/src/app.postcss
@@ -11,20 +11,23 @@
 			--card-foreground: 222.2 84% 4.9%;
 			--popover: 0 0% 100%;
 			--popover-foreground: 222.2 84% 4.9%;
-			--primary: 221.2 83.2% 53.3%;
-			--primary-foreground: 210 40% 98%;
+			--primary: 221.4 86.3% 49.8%;
+			--primary-foreground: 225 100% 97%;
 			--secondary: 210 40% 96.1%;
 			--secondary-foreground: 222.2 47.4% 11.2%;
 			--muted: 210 40% 96.1%;
 			--muted-foreground: 215.4 16.3% 46.9%;
-			--accent: 210 40% 96.1%;
-			--accent-foreground: 222.2 47.4% 11.2%;
+			--accent: 220.65, 13.19%, 46.08%;
+			--accent-foreground: 210, 20%, 98.04%;
 			--destructive: 0 72.22% 50.59%;
 			--destructive-foreground: 210 40% 98%;
 			--border: 214.3 31.8% 91.4%;
 			--input: 214.3 31.8% 91.4%;
 			--ring: 221.2 83.2% 53.3%;
 			--radius: 0.5rem;
+			--success: 154 76% 40%;
+			--success-foreground:142, 73%, 95%;
+			
 		}
 	}
 }
